--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -76,13 +76,13 @@
                   </div>
                   <p class="mb-5">Cada año éstas actividades muestran la capacidad de nuestros docentes y alumnos, con disertantes de distinto punto del país, con la intención de reforzar el conocimiento y vivir mejor en esta sociedad.</p>
 
-                  <a routerLink="/eventos2021" class="btn btn-outline-primary nav-link py-2 px-3 me-3">
+                  <a href="/eventos2021" class="btn btn-outline-primary nav-link py-2 px-3 me-3">
                       Ir al evento 2021
                       <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                           <i class="fa fa-arrow-right"></i>
                       </div>
                   </a>
-                  <a routerLink="/eventos2022" class="btn btn-outline-primary nav-link py-2 px-3 me-3">
+                  <a href="/eventos2022" class="btn btn-outline-primary nav-link py-2 px-3 me-3">
                       Ir al evento 2022
                       <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                           <i class="fa fa-arrow-right"></i>
