--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-      <a routerLink="/home" class="navbar-brand ms-4 ms-lg-0">
+      <a href="/home" class="navbar-brand ms-4 ms-lg-0">
           <h1 class="fw-bold text-primary m-0">Jornadas.<span class="text-white">Congresos</span></h1>
       </a>
       <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -23,10 +23,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <li><a routerLink="/home" class="nav-item nav-link">Inicio</a></li>
-            <li><a routerLink="/eventos2021" class="nav-item nav-link">Eventos 2021</a></li>
-            <li><a routerLink="/eventos2022" class="nav-item nav-link">Eventos 2022/23</a></li>
-            <li><a routerLink="/eventos2024" class="nav-item nav-link">Eventos 2024</a></li>
+            <li><a href="./home" class="nav-item nav-link">Inicio</a></li>
+            <li><a href="/eventos2021" class="nav-item nav-link">Eventos 2021</a></li>
+            <li><a href="/eventos2022" class="nav-item nav-link">Eventos 2022/23</a></li>
+            <li><a href="/eventos2024" class="nav-item nav-link">Eventos 2024</a></li>
           </div>
       </div>
   </nav>
